{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "6ff649c0-efec-4d27-a21f-0c12a79d5ef9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "7d18a739-deb3-432a-9db6-50dc51def3e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressSpecialKey",
                    "type": "Button",
                    "id": "608397c5-00d8-40c5-b15e-f4e1769dd419",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector KeyBoard",
                    "id": "d370f37c-9284-47ea-8215-671c8894cbad",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2b2e8ba-afdf-462f-90ab-bb13c0b0f75a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Clamp(max=0.5)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4992c4e1-130b-4ef2-9991-0c965a390d67",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Clamp(max=0.5)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e14b5186-bc36-4fb3-82c7-4509f9be283f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Clamp(max=0.5)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d768f5da-2445-4fdb-805d-760976382876",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Clamp(max=0.5)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fc5764f9-d9c9-4b31-9a23-ea95afcc7685",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressSpecialKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "4a902871-f325-4197-9409-feebfe8c9de7",
            "actions": [
                {
                    "name": "Camera Controls",
                    "type": "PassThrough",
                    "id": "a378315b-44b1-42e9-97df-90a76b2df68a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "09a81629-8753-499f-8ecc-bbd0e344af6e",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Controls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f03e695f-b189-4ccf-b2da-5e75d171658b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Controls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a8f01fab-50c1-45dc-936c-9b442b11f602",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Controls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e93df3dc-69f4-4107-bf03-c9651050bfa5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Controls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fd1500cc-2e39-4fe5-b5b7-b3dbc0e1f372",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Controls",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "c5d9b141-4907-4e5a-90b3-0f5226976468",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "55c26b22-73e2-45bc-9632-b8bfba00003a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9fba761d-b26a-4574-a2db-0840be40af0f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}